Improve webhook management docs
UI and API updates

Final updates

Fix link to event types

Standardize word usage

Remove old page

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2299,8 +2299,14 @@ manuals:
             path: /ee/dtr/user/audit-repository-events/
           - title: Auto-delete repository events
             path: /ee/dtr/admin/configure/auto-delete-repo-events/
-      - path: /ee/dtr/user/create-and-manage-webhooks/
-        title: Create and manage webhooks
+      - sectiontitle: Manage webhooks
+        section:
+          - title: Create and manage webhooks
+            path: /ee/dtr/admin/manage-webhooks/
+          - title: Use the web interface
+            path: /ee/dtr/admin/manage-webhooks/use-the-web-ui
+          - title: Use the API
+            path: /ee/dtr/admin/manage-webhooks/use-the-api
       - title: Manage access tokens
         path: /ee/dtr/user/access-tokens/
       - title: Tag pruning
